# 221BravoApp

./: Cargo.toml  LICENSE  README.md  canister_ids.json  dfx.json  notes.txt  package-lock.json  package.json
scripts/: Testing_Readme.txt  icrc_download.sh  icrc_setup.sh  icrc_state.sh  icrc_state2.sh  new_token.sh
src/backend/: Cargo.toml  account_identifier.rs  backend.did  lib.rs  types.rs  utils.rs
src/declarations/backend/: backend.did.d.ts  backend.did.js  index.js
src/declarations/dataProcesser1/: dataProcesser1.did.d.ts  dataProcesser1.did.js  index.d.ts  index.js
src/declarations/frontend/: frontend.did.d.ts  index.js
src/declarations/icp_data_processer/: icp_data_processer.did.d.ts  icp_data_processer.did.js  index.d.ts  index.js
src/declarations/icrc_data_processer/: icrc_data_processer.did.d.ts  icrc_data_processer.did.js  index.d.ts  index.js
src/declarations/icrc_ledger_test/: icrc_ledger_test.did.d.ts  index.d.ts  index.js
src/declarations/icrc_super_indexer/: icrc_super_indexer.did.d.ts  icrc_super_indexer.did.js  index.d.ts  index.js
src/declarations/icrc_tx_store/: icrc_tx_store.did.d.ts  icrc_tx_store.did.js  index.d.ts  index.js
src/declarations/snapshot_canister/: index.d.ts  index.js  snapshot_canister.did.d.ts  snapshot_canister.did.js
src/dynamic_content/: Cargo.toml  custom_types.rs  dynamic_content.did  lib.rs  state_management.rs
src/flags_canister/: Cargo.toml  custom_types.rs  flags_canister.did  lib.rs  state_management.rs
src/frontend/src/: app.html  bootstrap.min.css
src/frontend/src/lib/code/: addressBook.js  auth.js  constants.js  fetchContent.js  fetchStats.js  icAgent.js  searchRequest.js  searchRequest_v2.js  searchRequest_v3.js  stoicAuth.js  testData.js  txArtistUtils.js  txArtistUtilsHome.js  utils.js
src/frontend/src/lib/componants/: SNSCarousel.svelte  addressBook.svelte  addressBookTable.svelte  blockSearchForm.svelte  dynamicSubHead_v2.svelte  flagsTable.svelte  footer.svelte  fraudReport.svelte  head.svelte  headBTNS.svelte  hiddenContent.svelte  layoutCombine.svelte  linkTokenSearch.svelte  linksTable.svelte  linksTable_v2.svelte  loginForm.svelte  membersChat.svelte  newsCarousel.svelte  projectCarousel.svelte  searchForm.svelte  searchOverview.svelte  searchSubHead.svelte  (+12 more)
src/frontend/src/routes/: +layout.svelte  +page.svelte
src/icp_data_processer/: Cargo.toml  constants.rs  icp_data_processer.did  lib.rs  types.rs  utils.rs
src/icp_snapshot_canister/: Cargo.toml  icp_snapshot_canister.did  lib.rs  types.rs
src/icp_super_indexer/: Cargo.toml  constants.rs  custom_types.rs  fetch_data.rs  icp_super_indexer.did  lib.rs  process_data.rs  state_management.rs  test_data.rs  utils.rs
src/icp_tx_store/: Cargo.toml  custom_types.rs  icp_tx_store.did  lib.rs  state_management.rs
src/icrc-ledger-types/: CHANGELOG.md
src/icrc_data_processer/: Cargo.toml  constants.rs  icrc_data_processer.did  lib.rs  test_data.rs  types.rs  utils.rs
src/icrc_snapshot_canister/: Cargo.toml  lib.rs  memory.rs  snapshot_canister.did  types.rs  utils.rs
src/icrc_super_indexer/: Cargo.toml  NOTES.txt  constants.rs  custom_types.rs  fetch_data.rs  icrc_super_indexer.did  lib.rs  process_data.rs  state_management.rs  test_data.rs  utils.rs
src/icrc_tx_store/: Cargo.toml  constants.rs  icrc_tx_store.did  lib.rs  state_management.rs  utils.rs
src/kyt_module/test_canister/: Cargo.toml  constants.rs  lib.rs  test_canister.did  types.rs  utils.rs
src/snapshot_canister/: constants.rs  lib.rs
src/tracking_canister/: Cargo.toml  constants.rs  custom_types.rs  exchanges.rs  lib.rs  state_management.rs  test_data.rs  tracking_canister.did  tx_tracking.rs  utils.rs
(+113 files in other folders)
