[workspace]
members = [
    "src/backend",
    "src/icrc_data_processer",
    "src/icp_data_processer",
    "src/icrc_snapshot_canister",
    "src/icp_snapshot_canister",
    "src/icp_super_indexer",
    "src/icp_tx_store",
    "src/icrc_super_indexer",
    "src/icrc_tx_store",
    "src/dynamic_content",
    "src/flags_canister",
]
