[package]
name = "icp_snapshot_canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.10.0"
ic-cdk-macros = "0.7.0"
candid = "0.9.2"
serde = "1.0.159"
ic-cdk-timers = "0.4.0"
ciborium = "0.2.1"
ic-stable-structures = "0.5.6"