[package]
name = "icp_super_indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.9.2"
ic-cdk-macros = "0.7.1"
candid = "0.8.4"
serde = "1.0.159"
serde_bytes = "0.11.9"
num-traits = "0.2.7"
ic-stable-memory = "0.4"
icrc-ledger-types = { path = "../icrc-ledger-types" }
hex = { version = "0.4.3", features = ["serde"] }
ic-cdk-timers = "0.4.0"