[package]
name = "icrc_data_processer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.9.2"
ic-cdk-macros = "0.7.1"
candid = "0.8.4"
serde = "1.0.159"
ic-cdk-timers = "0.4.0"
serde_bytes = "0.11.9"
sha2 = "0.10.6"
hex = { version = "0.4.3", features = ["serde"] }
crc32fast = "1.2"
num-traits = "0.2.15"